# nesvesk-vienas

./: .biomeignore  CHANGELOG.md  README.md  TODO.md  biome.json  biome.jsonc  build.ts  env.example  instrumentation-client.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vitest.config.ts  znote.md
.claude/: CLAUDE.md
app/: globals.css  layout.tsx
components/: DevPanel.tsx  PhotoGallery.tsx  PhotoUpload.tsx  app-sidebar.tsx  dashboard-navbar.tsx  face-verification.tsx  language-selector.tsx  listing-card.tsx  login-form.tsx  navbar.tsx  preference-card.tsx  preference-cards.tsx  profile-preference-cards.tsx  profile-view.tsx  top-bar.tsx  unified-profile-card.tsx  verify-banner.tsx
contexts/: locale-context.tsx
convex/: auth.config.ts  consents.test.ts  consents.ts  email.ts  emailTemplates.tsx  events.ts  files.ts  invitations.ts  messages.ts  migrations.ts  moderation.ts  profiles.test.ts  profiles.ts  schema.ts  seed.ts  users.ts
docs/: CHANGELOG.md  CLAUDE.md  EDITING.md  PIVOT-ANALYSIS.md  README.md  SENTRY-USAGE.md  TODO.md  bun-convex-docs.md  holiday-platform-planning-2.md  verification-stack-options.md
e2e/: auth.spec.ts  browse.spec.ts  fixtures.ts  global-setup.ts  messages.spec.ts  stagehand.spec.ts
emails/: base-layout.tsx  index.tsx  invitation-accepted.tsx  invitation-declined.tsx  invitation-received.tsx  new-message.tsx  test-email.tsx
face-service/: convert_edgeface.py  main.py  pyproject.toml
face-service/models/: edgeface_xxs.onnx
lib/: i18n.ts  (+4 more)
(+152 files in other folders)
